Reetan.Nayak Dev 25/force-app/main/default/objects/Favorites__c/Favorites__c.object-meta.xml
<CustomObject>
    <description>Contains records for all favorites including:  Account, Contact, and Opportunities</description>
    <label>Favorites</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Favorites</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>