Reetan.Nayak Dev 25/force-app/main/default/objects/Favorites__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference the Account record that has been marked as a Favorite.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Favorites</relationshipLabel>
    <relationshipName>Favorites1</relationshipName>
    <type>Lookup</type>
</CustomField>