Reetan.Nayak Dev 25/force-app/main/default/objects/Favorites__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference the Contact record that has been marked as a Favorite.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Favorites</relationshipLabel>
    <relationshipName>Favorites1</relationshipName>
    <type>Lookup</type>
</CustomField>