Reetan.Nayak Dev 25/force-app/main/default/objects/Favorites__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference the Lead record that has been marked as a Favorite.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Favorites</relationshipLabel>
    <relationshipName>Favorites1</relationshipName>
    <type>Lookup</type>
</CustomField>