Reetan.Nayak Dev 25/force-app/main/default/objects/Favorites__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference the Opportunity record that has been marked as a Favorite.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Favorites</relationshipLabel>
    <relationshipName>Favorites1</relationshipName>
    <type>Lookup</type>
</CustomField>