Reetan.Nayak Dev 25/force-app/main/default/objects/Favorites__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference the User who marked the record as a Favorite.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Favorites1</relationshipName>
    <type>Lookup</type>
</CustomField>